--- a/index.html
+++ b/index.html
@@ -5,12 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
+    <title>Tic-Tac-Toe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css"></link>
     <link rel="stylesheet" href="style.css"></link>
 </head>
 
 <body>
+    <div class="container">
+
+        <div class="header">
+            <h1>Tic-Tac-Toe</h1>
+        </div>
+
+        <div class="board-container">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <button class="reset-button" type="button">Reset</button>
+
+    </div>
+
 
 
 
