set up player functionality

--- a/index.html
+++ b/index.html
@@ -15,30 +15,26 @@
 
 <body>
     <div class="container">
-
-        <div class="header">
-            <h1>Tic-Tac-Toe</h1>
+        <div class="game-container">
+            <div class="header">
+                <h1>Tic-Tac-Toe</h1>
+            </div>
+            <div class="board-container">
+                <div id="1" class="tile"></div>
+                <div id="2" class="tile"></div>
+                <div id="3" class="tile"></div>
+                <div id="4" class="tile"></div>
+                <div id="5" class="tile"></div>
+                <div id="6" class="tile"></div>
+                <div id="7" class="tile"></div>
+                <div id="8" class="tile"></div>
+                <div id="9" class="tile"></div>
+            </div>
+            <div class="reset-button-container">
+                <button id="reset-button" class="reset-button" type="button">Reset</button>
+            </div>
         </div>
-
-        <div class="board-container">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-
-        <button class="reset-button" type="button">Reset</button>
-
     </div>
-
-
-
-
     <script src="script.js"></script>
 </body>
 
