--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/icon.svg">
     <title>Tic-Tac-Toe</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,7 @@
     <div class="container">
         <div class="game-container">
             <div class="header">
-                <h1>Tic-Tac-Toe</h1>
+                <h1 id="title">Tic-Tac-Toe</h1>
             </div>
             <div class="board-container">
                 <div id="1" class="tile"></div>
